# LlglGui

./: .gitignore  CMakeLists.txt
example/1.helloWorld/: CMakeLists.txt  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
include/llgl/: Color.hpp  Llgl.hpp  Object.hpp  Pipeline.hpp  Point.hpp  RectObj.hpp  Shader.hpp  Size.hpp  Window.hpp
src/: Color.cpp  Llgl.cpp  Pipeline.cpp  RectObj.cpp  Shader.cpp  Size.cpp  Window.cpp
